--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     Hello World 
     APl
+  https://api.instagram.com/oauth/authorize
+  ?client_id={app-id}
+  &redirect_uri={redirect-uri}
+  &scope=user_profile,user_media
+  &response_type=code
 </body>
 </html>
