--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     Hello World 
     APl
   https://api.instagram.com/oauth/authorize
-  ?client_id={app-id}
-  &redirect_uri={redirect-uri}
+  ?client_id= 725584818208638
+  &redirect_uri= https://andjelam97.github.io/
   &scope=user_profile,user_media
   &response_type=code
 </body>
